# productivitygo

./: .gitignore  404.html  index.html  manifest.json  supabase_schema.sql
backend/: Dockerfile  apply_bug001_fix.py  database.py  dependencies.py  deploy_adventure_completion.py  deploy_adventure_functions.py  deploy_adventure_schema.py  fly.toml  functions_adventure.sql  functions_adventure_completion.sql  functions_adventure_helpers.sql  functions_battle_scoring.sql  functions_forfeit.sql  main.py  models.py  performance_indexes.sql  pyproject.toml  pytest.ini  requirements.txt  rollback_adventure_completion.sql  rollback_adventure_mode.sql  rollback_battles_break.sql  scheduler.py  schema_adventures.sql  schema_current_battle.sql  schema_full.sql  schema_monsters.sql  seed_monsters.sql  test_adventure_endpoints.py
backend/migrations/: 001_add_task_categories_and_monster_types.sql  002_update_adventure_damage_calculation.sql  add_adventure_to_daily_entries.sql  add_adventure_to_profiles.sql  add_break_to_battles.sql  add_completed_at.sql  add_completed_tasks_trigger.sql  add_monster_pool_refresh.sql  cleanup_audit_items_1_5_to_3_1.sql  remove_dead_columns_audit_items_1_1_to_1_4.sql
backend/routers/: adventures.py  battles.py  invites.py  social.py  tasks.py  users.py
backend/services/: adventure_service.py  battle_service.py
backend/tests/: __init__.py  conftest.py  test_atomic_operations.py  test_battle_completion_race.py  test_battle_service.py  test_game_mode_abstraction.py  test_null_profile_handling.py  test_refactor_utilities.py  test_rpc_validation.py  (+2 more)
(+145 files in other folders)
